samples/_failures_safe/1761126441_f0a1a2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_495a0c94.c: In function ‘main’:
./samples/SAFE/__tmp_495a0c94.c:160:21: error: expected declaration or statement at end of input
  160 |                     data_index++;
      |                     ^~~~~~~~~~
./samples/SAFE/__tmp_495a0c94.c:160:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_495a0c94.c:160:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_495a0c94.c:160:21: error: expected declaration or statement at end of input
